# BEM_for_Nonlinear_Waves

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pages.yml
bem/: BEM_BoundaryValues.hpp  BEM_calculateVelocities.hpp  BEM_checkpoint.hpp  BEM_collision.hpp  BEM_inputfile_reader.hpp  BEM_remesh_main.hpp  BEM_setBoundaryTypes.hpp  BEM_solveBVP.hpp  BEM_solveBVP_GMRES_FMM.hpp  BEM_solveBVP_LU.hpp  BEM_step_failure.hpp  OutputParaview.hpp  frequency_domain_main.cpp  frequency_domain_test.cpp  main_freq_domain.cpp  main_time_domain.cpp  network_integrity_check.cpp  test_AAA_coefficients.cpp  test_axis_alignment.cpp  test_comprehensive.cpp  test_dipole.cpp  test_goring_m2l.cpp  test_m2l_function.cpp  test_monopole.cpp  test_monopole_full.cpp  test_normalization_experiments.cpp  test_order_comparison.cpp  test_plane_wave_full.cpp  test_simple_comparison.cpp  test_sph_harmonics.cpp  test_spherical_coords.cpp  test_tanaka_plot.cpp  vec_check_clang.cpp
bem/examples/goring1979/: gauge1.json  gauge2.json  gauge3.json  settings.json  tank.json  water.json  wavemaker.json
bem/metal_m2l/: CMakeLists.txt  metal_m2l.h  metal_m2l.metal  metal_m2l.mm  metal_m2l_wrapper.hpp
bem/metal_nearfield/: CMakeLists.txt  build.sh  metal_nearfield.h  metal_nearfield.metal  metal_nearfield.mm  metal_nearfield_wrapper.hpp
docs/: _config.yml  getting-started.md  gui.md  index.md  input-format.md  theory.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/assets/css/: style.css  style.scss
docs/examples/: deepcwind.md  goring1979.md
docs/ja/: getting-started.md  gui.md  index.md  input-format.md  theory.md
docs/ja/examples/: deepcwind.md  goring1979.md
docs/ja/theory/: ale-mesh.md  boundary-integral.md  floating-body.md  fmm.md  index.md  wave-generation.md
docs/tex/: main.toc
docs/theory/: ale-mesh.md  boundary-integral.md  floating-body.md  fmm.md  index.md  wave-generation.md
lib/include/: Network.hpp  basic_geometry.hpp  lib_spatial_partitioning.hpp  moments.hpp
lib/src/: Network.cpp  networkFace.cpp  networkLine.cpp  networkPoint.cpp
